# nacc-attribute-deriver

./: .gitignore  BUILD  CHANGELOG.md  README.md  linux_x86_py312.json  pants.toml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json  post_create_command.sh
.github/workflows/: build.yml  pants.yml
docs/: index.md  operations.md  regression.md  todo.md
nacc_attribute_deriver/: BUILD  attribute_deriver.py  deriver_cli.py  schema_generator_cli.py  symbol_table.py
nacc_attribute_deriver/attributes/: __init__.py  attribute_collection.py  attribute_map.py
nacc_attribute_deriver/config/: BUILD  UDSMEDS.csv  UDSMEDS_combined.csv  all_rules.csv  curation_rules.csv  derive_rules.csv  drug_ids_v1.csv  file_missingness.csv  form_rules.csv  missingness_rules.csv  ncrad_rules.csv  normalized_drug_ids.csv  normalized_drug_ids_v1.csv  scan_rules.csv  subject_missingness.csv  test_missingness.csv  uds_ded_matrix.csv
nacc_attribute_deriver/deriver/: attribute_deriver.py
nacc_attribute_deriver/schema/: constants.py  errors.py  operation.py  rule_types.py  schema.py
nacc_attribute_deriver/utils/: constants.py  date.py  errors.py  scope.py
rule_reflection/: inspect_rule_types.py
src/nacc_attribute_deriver/: __init__.py  attribute_deriver.py  symbol_table.py
tests/: BUILD  conftest.py  test_e2e.py
tests/attributes/: test_attribute_collection.py
tests/baseline/: full_form.json  schema.json
tests/e2e/: BUILD  test_e2e.py
tests/general/: test_attribute_deriver.py  test_e2e.py  test_e2e_derived.py  test_e2e_missingness.py  (+1 more)
(+336 files in other folders)
